--- a/traffic.html
+++ b/traffic.html
@@ -7,9 +7,41 @@
     </head>
     <body>
         <div class="block3">
+            <div class="trafficlight">
+                <div id="red"></div>
+                <div id="yellow"></div>
+                <div id="green"></div>
+            </div>
+
+            <div class="squarebuttons">
+                <div class="buttonbox">
+                    <div class="button one"></div>
+                    <div class="button two"></div>
+                    <div class="button one"></div>
+                </div>
+                <div class="buttonbox1">
+                    <div class="button two"></div>
+                    <div class="button one"></div>
+                    <div class="button two"></div>
+                </div>
+                <div class="buttonbox2">
+                    <div class="button one"></div>
+                    <div class="button two"></div>
+                    <div class="button one"></div>
+                </div>
+            </div>
+            <div class="roundbuttons">
+                <div class="rbutton1"></div>
+                <div class="rbutton2"></div>
+                <div class="rbutton3"></div>
+                <div class="rbutton4"></div>
+            </div>
+            <div class="lever"></div>
+
+            <div id="froggy"></div>
 
         </div>
-        <script src="javascript/jquery-3.6.3.slim.min.js" charset="utf-8"></script>
-        <script src="javascript/main.js"></script>
     </body>
+    <script src="javascript/jquery-3.6.3.slim.min.js" charset="utf-8"></script>
+    <script src="javascript/main.js"></script>
 </html>
