--- a/traffic.html
+++ b/traffic.html
@@ -31,10 +31,10 @@
                 </div>
             </div>
             <div class="roundbuttons">
-                <div class="rbutton1"></div>
-                <div class="rbutton2"></div>
-                <div class="rbutton3"></div>
-                <div class="rbutton4"></div>
+                <div class="rbutton white"></div>
+                <div class="rbutton orange"></div>
+                <div class="rbutton lime"></div>
+                <div class="rbutton green"></div>
             </div>
             <div class="lever"></div>
 
