--- a/traffic.html
+++ b/traffic.html
@@ -36,12 +36,17 @@
                 <div class="rbutton lime"></div>
                 <div class="rbutton green"></div>
             </div>
-            <div class="lever"></div>
+            <div class="lever">
+                <div id="pull"></div>
+                <div id="bar"></div>
+            </div>
 
             <div id="froggy"></div>
 
         </div>
-    </body>
-    <script src="javascript/jquery-3.6.3.slim.min.js" charset="utf-8"></script>
+                    
+        <script src="javascript/jquery-3.6.3.js" charset="utf-8"></script>
+            <script src="javascript/jquery-3.6.3.slim.min.js" charset="utf-8"></script>
     <script src="javascript/main.js"></script>
+    </body>
 </html>
