--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
     
                 <div class="squarebuttons">
                     <div class="buttonbox">
-                        <div class="button one"></div>
-                        <div class="button two"></div>
-                        <div class="button one"></div>
+                        <div class="button" id="one"></div>
+                        <div class="button" id="two"></div>
+                        <div class="button" id="three"></div>
                     </div>
                     <div class="buttonbox1">
-                        <div class="button two"></div>
-                        <div class="button one"></div>
-                        <div class="button two"></div>
+                        <div class="button" id="four"></div>
+                        <div class="button" id="five"></div>
+                        <div class="button" id="six"></div>
                     </div>
                     <div class="buttonbox2">
-                        <div class="button one"></div>
-                        <div class="button two"></div>
-                        <div class="button one"></div>
+                        <div class="button" id="seven"></div>
+                        <div class="button" id="eight"></div>
+                        <div class="button" id="nine"></div>
                     </div>
                 </div>
 
@@ -75,9 +75,10 @@
                     <div class="rbutton lime"></div>
                     <div class="rbutton green"></div>
                 </div>
+
                 <div class="lever">
                     <div id="pull"></div>
-                    <div id="bar" class="ui-widget ui-corner-all ui-state-error"></div>
+                    <div id="bar"></div>
                 </div>
     
                 <div id="froggy"></div>   
