--- a/traffic.html
+++ b/traffic.html
@@ -15,19 +15,19 @@
 
             <div class="squarebuttons">
                 <div class="buttonbox">
-                    <div class="button one"></div>
-                    <div class="button two"></div>
-                    <div class="button one"></div>
+                    <div class="button" id="one"></div>
+                    <div class="button" id="two"></div>
+                    <div class="button" id="three"></div>
                 </div>
                 <div class="buttonbox1">
-                    <div class="button two"></div>
-                    <div class="button one"></div>
-                    <div class="button two"></div>
+                    <div class="button" id="one"></div>
+                    <div class="button" id="one"></div>
+                    <div class="button" id="one"></div>
                 </div>
                 <div class="buttonbox2">
-                    <div class="button one"></div>
-                    <div class="button two"></div>
-                    <div class="button one"></div>
+                    <div class="button" id="one"></div>
+                    <div class="button" id="one"></div>
+                    <div class="button" id="one"></div>
                 </div>
             </div>
             <div class="roundbuttons">
@@ -36,13 +36,14 @@
                 <div class="rbutton lime"></div>
                 <div class="rbutton green"></div>
             </div>
-            <div class="lever">
-                <div id="pull"></div>
-                <div id="bar"></div>
-            </div>
+
+                <div class="lever">
+                    <div id="pull"></div>
+                    <div id="bar"></div>
+                </div>
 
             <div id="froggy"></div>
-
+                
         </div>
                     
         <script src="javascript/jquery-3.6.3.js" charset="utf-8"></script>
