--- a/avoider.html
+++ b/avoider.html
@@ -10,10 +10,20 @@
     <body>
         <div class="block4">
 
-            <div class="frogcharacter"></div>
+            <div class="player"></div>
 
-            <div class="danger">
-                <div class="triangle"></div>
+            <div class="grid">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                
             </div>
 
         </div>
