--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
     
                 <div class="squarebuttons">
                     <div class="buttonbox">
-                        <div class="button" id="one"></div>
-                        <div class="button" id="two"></div>
-                        <div class="button" id="three"></div>
+                        <div class="button one"></div>
+                        <div class="button two"></div>
+                        <div class="button one"></div>
                     </div>
                     <div class="buttonbox1">
-                        <div class="button" id="four"></div>
-                        <div class="button" id="five"></div>
-                        <div class="button" id="six"></div>
+                        <div class="button two"></div>
+                        <div class="button one"></div>
+                        <div class="button two"></div>
                     </div>
                     <div class="buttonbox2">
-                        <div class="button" id="seven"></div>
-                        <div class="button" id="eight"></div>
-                        <div class="button" id="nine"></div>
+                        <div class="button two"></div>
+                        <div class="button one"></div>
+                        <div class="button two"></div>
                     </div> 
                 </div>
 
@@ -86,6 +86,7 @@
             </div> 
         <script src="javascript/jquery-3.6.3.js" charset="utf-8"></script>
         <script src="javascript/main.js"></script>
+        <script src="javascript/jquery-ui.js"></script>
     </body>
 
 </html>
