--- a/traffic.html
+++ b/traffic.html
@@ -49,5 +49,6 @@
         <script src="javascript/jquery-3.6.3.js" charset="utf-8"></script>
             <script src="javascript/jquery-3.6.3.slim.min.js" charset="utf-8"></script>
     <script src="javascript/main.js"></script>
+    <script src="javascript/jquery-ui.js"></script>
     </body>
 </html>
