--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                         <div class="button two"></div>
                     </div>
                     <div class="buttonbox2">
-                        <div class="button two"></div>
                         <div class="button one"></div>
                         <div class="button two"></div>
+                        <div class="button one"></div>
                     </div> 
                 </div>
 
