--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="stylesheet/style.css">
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
         
         <title>kva-kva</title>
 
@@ -77,7 +78,7 @@
                 </div>
 
                 <div class="lever">
-                    <div id="pull"></div>
+                    <div id="pull" class="ui-widget-content"></div>
                     <div id="bar"></div>
                 </div>
     
@@ -86,7 +87,7 @@
             </div> 
         <script src="javascript/jquery-3.6.3.js" charset="utf-8"></script>
         <script src="javascript/main.js"></script>
-        <script src="javascript/jquery-ui.js"></script>
+        <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     </body>
 
 </html>
