--- a/traffic.html
+++ b/traffic.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div class="block3">
+
             <div class="trafficlight">
                 <div id="red"></div>
                 <div id="yellow"></div>
@@ -15,21 +16,22 @@
 
             <div class="squarebuttons">
                 <div class="buttonbox">
-                    <div class="button" id="one"></div>
-                    <div class="button" id="two"></div>
-                    <div class="button" id="three"></div>
+                    <div class="button one"></div>
+                    <div class="button two"></div>
+                    <div class="button one"></div>
                 </div>
                 <div class="buttonbox1">
-                    <div class="button" id="one"></div>
-                    <div class="button" id="one"></div>
-                    <div class="button" id="one"></div>
+                    <div class="button two"></div>
+                    <div class="button one"></div>
+                    <div class="button two"></div>
                 </div>
                 <div class="buttonbox2">
-                    <div class="button" id="one"></div>
-                    <div class="button" id="one"></div>
-                    <div class="button" id="one"></div>
-                </div>
+                    <div class="button one"></div>
+                    <div class="button two"></div>
+                    <div class="button one"></div>
+                </div> 
             </div>
+
             <div class="roundbuttons">
                 <div class="rbutton white"></div>
                 <div class="rbutton orange"></div>
@@ -37,18 +39,17 @@
                 <div class="rbutton green"></div>
             </div>
 
-                <div class="lever">
-                    <div id="pull"></div>
-                    <div id="bar"></div>
-                </div>
+            <div class="lever">
+                <div id="pull" class="ui-widget-content"></div>
+                <div id="bar"></div>
+            </div>
 
-            <div id="froggy"></div>
-                
-        </div>
+            <div id="froggy"></div>   
+
+        </div> 
                     
         <script src="javascript/jquery-3.6.3.js" charset="utf-8"></script>
-            <script src="javascript/jquery-3.6.3.slim.min.js" charset="utf-8"></script>
-    <script src="javascript/main.js"></script>
-    <script src="javascript/jquery-ui.js"></script>
+        <script src="javascript/main.js"></script>
+        <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     </body>
 </html>
