--- a/avoider.html
+++ b/avoider.html
@@ -11,45 +11,15 @@
         <div class="block4">
 
             <div class="player"></div>
-            <div class="grid">
-
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+            <div id="enemy1"></div>
+            <div id="enemy2"></div>
+            <div id="enemy3"></div>
+            <div id="enemy4"></div>
+            <div id="enemy5"></div>
             </div>
         </div>
 
         <script src="javascript/jquery-3.6.3.js" charset="utf-8"></script>
-        <script src="javascript/main.js"></script>
+        <script src="javascript/main2.js"></script>
     </body>
 </html>
