--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
 
 
-            <div class="block5">
+            <div class="block5" hidden>
 
                 <div class="player"></div>
                 <div class="enemy"></div>
