--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="stylesheet/style.css">
-        <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
         
         <title>kva-kva</title>
 
@@ -124,7 +123,9 @@
 
     
         <script src="javascript/jquery-3.6.3.js" charset="utf-8"></script>
+        <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
         <script src="javascript/main.js"></script>
+        <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     </body>
 
 </html>
