--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <div class="block6" hidden>
 
                 <h1 class="lose">ВЫ ПРОИГРАЛИ(((</h1>
+                <h1 class="restart">НАЧАТЬ ЗАНОВО</h1>
 
                 <div class="sadfrog"></div>
         
