--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                     <h1 class="hurry">ПОТОРОПИСЬ, ПРОШУ!</h1>
                     <div class="cross"></div>
                 </div>
+
+                <div class="speechbubble1" hidden>
+                    <h1 class="continue">ПРОДОЛЖИМ ПУТЬ</h1>
+                </div>
     
                 <div class="squarebuttons">
                     <div class="buttonbox">
@@ -96,8 +100,10 @@
 
             <!-- ВТОРАЯ МИНИ ИГРА -->
             <div class="block4" hidden>
-               
-                <h1 class="helpfrog" hidden>ПРОДОЛЖИТЬ</h1>
+               <div class="continuefrog"></div>
+               <div class="bubblepop" hidden>
+                    <h1 class="helpfrog">ПРОДОЛЖИТЬ</h1>
+               </div>
 
                 <img src="images/ewleaf1.svg" class="ewleaf1 uberi1">
                 <img src="images/ewleaf1.svg" class="ewleaf1 uberi2">
@@ -136,8 +142,9 @@
 
 
             <div class="block6" hidden>
-
-                <h1 class="win">ВЫ ПРОШЛИ ИГРУ!!!</h1>
+                <div class="thankyou">
+                <h1 class="win">СПАСИБО ЗА ПОМОЩЬ <br> В ДОРОГЕ, ДРУГ!</h1>
+            </div>
 
                 <div class="happyfrog">
                     <div class="tear"></div>
