--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
 
         <div class="frog">
+            <img class="image" src="images/frog.svg">
             <div class="eye1"></div>
             <div class="eye2"></div>
         </div>
